--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.23.6",
     "autoprefixer": "^10.4.13",
     "next": "12.1.5",
     "postcss": "^8.4.18",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "swiper": "^8.4.4",
     "tailwindcss": "^3.2.1",
     "web3": "^1.7.3",
     "web3-utils": "^1.8.0"
