--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.23.6",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "next": "12.1.5",
     "postcss": "^8.4.18",
     "react": "18.1.0",
