--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.4.18",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "ssr-fetch": "^1.0.11",
     "swiper": "^8.4.4",
     "tailwindcss": "^3.2.1",
     "web3": "^1.7.3",
