--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.23.6",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
+    "moment": "^2.29.4",
     "next": "12.1.5",
     "postcss": "^8.4.18",
     "react": "18.1.0",
